# biocaml

./: .gitignore  .mailmap  .ocamlformat  .ocamlinit  .travis-ci.sh  .travis.yml  Changes  INSTALL  INSTALL.md  LICENSE  Makefile  OMakeroot  README  README.md  TAGS  _oasis  _tags  biocaml.opam  biocaml.opam.template  configure  do.ml  dune-project  myocamlbuild.ml  myocamlbuild.post.ml  opam  package.json  setup.ml  toplevel.ml
app/: biocaml_run_benchmarks.ml  biocaml_run_tests.ml  dune  jbuild
esy.lock/: index.json
etc/: OCaml.om  travis.sh
etc/test_data/: bed_03_more_cols.bed  bed_04_more_cols_error.bed  bgzf_01.bgzf  bgzf_02.bgzf  fasta_01.fa  fasta_02.fa  fasta_03.fa  fasta_04.fa  vcf_01_header_only.vcf  vcf_02_simple.vcf  vcf_03_1000g.vcf  vcf_04_reserved.vcf  vcf_05_alt.vcf  vcf_06_samples.vcf
lib/async/: dune  fastq.ml  future_async.ml  future_async.mli  jbuild  lines.ml  sam.ml  std.ml
lib/async-unix/: fastq.ml  lines.ml  sam.ml  std.ml
lib/base/: bed.ml  bed.mli  biocaml_string.ml  biocaml_string.mli  dune  fasta.ml  fasta.mli  fasta2.ml  fasta2.mli  fastq.ml  fastq.mli  gff.ml  gff.mli  import.ml  jbuild  line.ml  line.mli  lines.ml  lines.mli  macs2.ml  macs2.mli  sam.ml  sam.mli  solexa_score.ml  std.ml  table.ml  table.mli  ucsc_genome_browser.ml  ucsc_genome_browser.mli
lib/benchmark/: bam_count_alignments.ml  line_split.ml  sam_count_alignments.ml  transform_bam.ml  transform_bam.mli  transform_sam.ml  transform_sam.mli
lib/ez/: bam.ml  bamstats.ml  dune  fasta.ml  fastq.ml  jbuild  lines.ml  lines.mli  phred_score.ml  range.ml  roman_num.ml  sam.ml  seq_range.ml  std.ml  strand.ml
lib/lwt/: dune  fastq.ml  future_lwt.ml  future_lwt.mli  jbuild  lines.ml  sam.ml
lib/lwt-unix/: fastq.ml  lines.ml  sam.ml  std.ml
lib/openin-20070524/: Makefile
lib/test/: bam.ml  bed.ml  bgzf.ml  bin_pred.ml  biocaml_test_zip.ml  dune  fasta.ml  gff.ml  inline_file.ml  interval_tree.ml  jbuild  line.ml  lines.ml  phred_score.ml  pwm.ml  rSet.ml  roman_num.ml  sam.ml  std.ml  suite.ml  table.ml  track.ml  ucsc_genome_browser.ml  utils.ml  vcf.ml  wig.ml
lib/tylesBase/: INSTALL  Makefile  README
lib/unix/: CFStream.ml  CFStream.mli  accu.ml  accu.mli  bam.ml  bam.mli  bam_alt.ml  bam_alt.mli  bamstats.ml  bamstats.mli  bar.ml  bar.mli  bed.ml  bed.mli  bgzf.ml  bgzf.mli  bin_pred.ml  bin_pred.mli  biocaml_about.ml.m4  biocaml_bam.ml  biocaml_bam.mli  biocaml_bam_alt.ml  biocaml_bar.ml  biocaml_bed.mli  biocaml_bgzf.ml  biocaml_bgzf.mli  biocaml_bin_pred.ml  biocaml_bpmap.mli  biocaml_cel.ml  biocaml_chr.ml  biocaml_fasta.ml  biocaml_fastq.ml  biocaml_genomeMap.ml  biocaml_gff.ml  biocaml_gff.mli  biocaml_internal_utils.mli  biocaml_interval_tree.ml  biocaml_iset.ml  biocaml_jaspar.ml  biocaml_lines.ml  (+111 more)
lib2/: Import.ml  Line.mli  Phred_score.ml  Phred_score.mli  Pos.ml  Pos.mli  dune
notes/: README_DEVEL
src/: META  _tags  base.odocl  bioCaml.mllib  bioCaml.mlpack  bioCaml.odocl  biocaml.mllib  biocaml.mlpack  biocaml.odocl  myocamlbuild.ml
src/app/: bamt.ml  biocaml_app_bed_operations.ml  biocaml_app_common.ml  biocaml_app_count_alignments.ml  biocaml_app_demux.ml  biocaml_app_entrez.ml  biocaml_app_random.ml  biocaml_app_transform.ml  biocaml_main.ml  gff_counts.ml  gff_to_bed.ml  gff_to_table.ml  sgr_to_wig.ml  wig_correlate.ml
src/base/: color.ml  color.mli  rSet.ml  rSet.mli  romanNum.mli  sparseArray.ml
src/benchmarks/: bam_count_alignments.ml  bam_sam_and_the_gc.ml  benchmark_zip.ml  main.ml
src/bioCaml/: about.mli  bar.ml  bar.mli  bed.ml  bed.mli  blat.ml  blat.mli  bpmap.ml  bpmap.mli  cel.ml  cel.mli  chrName.ml  chrName.mli  comments.ml  comments.mli  fasta.ml  fasta.mli  gff.ml  gff.mli  histogram.ml  invokeCmdline.ml  invokeCmdline.mli  math.ml  math.mli  range.ml  range.mli  sbml.ml  sbml.mli  seq.ml  seq.mli  sgr.ml  sgr.mli  strandName.ml  strandName.mli  track.ml  track.mli  tracks.ml  tracks.mli  transcripts.ml  transcripts.mli  (+2 more)
src/biocaml/: bed.ml  bed.mli  biocaml_about.ml  biocaml_about.mli  biocaml_bpmap.ml  biocaml_bpmap.mli  biocaml_chrName.ml  biocaml_genome.mli  biocaml_gff.ml  biocaml_histogram.mli  biocaml_rSet.mli  biocaml_sam.ml  biocaml_sam.mli  biocaml_table.ml  biocaml_track.ml  biocaml_track.mli  biocaml_transcripts.ml  biocaml_util.ml  blat.ml  bpmap.ml  bpmap.mli  cel.mli  chrName.ml  commentLines.ml  comments.ml  comments.mli  common.mli  fasta.ml  fasta.mli  fastq.ml  fastq.mli  genome.ml  gff.ml  gff.mli  histogram.ml  math.ml  phredScore.ml  phredScore.mli  rSet.ml  rSet.mli  (+14 more)
src/doc/: biocaml.css  index.txt.in  intro.txt
src/etc/: Makefile.post  oasis.in
src/ext/: xmlm
src/lib/: META  biocaml.ml  biocaml.mllib  biocaml_about.ml  biocaml_accu.ml  biocaml_accu.mli  biocaml_algo_edit_distance.ml  biocaml_algo_edit_distance.mli  biocaml_bam.ml  biocaml_bam.mli  biocaml_bam_alt.ml  biocaml_bam_alt.mli  biocaml_bar.ml  biocaml_bar.mli  biocaml_bed.ml  biocaml_bed.mli  biocaml_bgzf.ml  biocaml_bgzf.mli  biocaml_bin_pred.ml  biocaml_bin_pred.mli  biocaml_bpmap.ml  biocaml_bpmap.mli  biocaml_cel.ml  biocaml_cel.mli  biocaml_chr.ml  biocaml_chr.mli  biocaml_chrName.ml  biocaml_comments.ml  biocaml_comments.mli  biocaml_common.ml  biocaml_common.mli  biocaml_cosmic.ml  biocaml_cosmic.mli  biocaml_entrez.ml  biocaml_entrez.mli  biocaml_fasta.ml  biocaml_fasta.mli  biocaml_fastq.ml  biocaml_fastq.mli  biocaml_fastq_error.ml  (+98 more)
src/lib_async/: biocaml_async.ml  biocaml_async_internal_pervasives.ml  biocaml_async_internal_pervasives.mli
src/lib_ez/: biocaml_ez.ml
src/lib_lwt/: biocaml_lwt.ml  biocaml_lwt_fastq.ml  biocaml_lwt_fastq.mli  biocaml_lwt_internal_pervasives.ml  biocaml_lwt_internal_pervasives.mli
src/lwt_tests/: main.ml
src/odoc/: biohtml.ml
src/tests/: main.ml  test_algo.ml  test_bam.ml  test_bed.ml  (+22 more)
(+107 files in other folders)
