opam-version: "1.2"
version: "dev"
maintainer: "biocaml@googlegroups.com"
homepage: "http://biocaml.org"
bug-reports: "https://github.com/biocaml/biocaml/issues"
license: "LGPL + linking exception"
dev-repo: "https://github.com/biocaml/biocaml.git"
authors: [
  "Sebastien Mondet"
  "Ashish Agarwal"
  "Philippe Veber"
  "Christophe Troestler"
  "Sergei Lebedev"
  "David Koppstein"
  "Alexander Gryzlov"
  "Francois Berenger"
]

build: ["jbuilder" "build" "-p" name "-j" jobs]

depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "core_kernel" {>= "0.9.1"}
  "sexplib"
  "camlzip" {>= "1.05"}
  "xmlm"
  "cfstream"
  "ppx_compare"
  "ppx_sexp_conv"
  "re"
  "rresult"
  "uri"
]

depopts: [
  "async"
  "core"
  "lwt"
  "ounit"
]

available: [
  ocaml-version >= "4.03.0"
]
