opam-version: "1.2"
version: "dev"
maintainer: "biocaml@googlegroups.com"
homepage: "http://biocaml.org"
bug-reports: "https://github.com/biocaml/biocaml/issues"
license: "LGPL + linking exception"
dev-repo: "https://github.com/biocaml/biocaml.git"
authors: [
  "Sebastien Mondet"
  "Ashish Agarwal"
  "Philippe Veber"
  "Christophe Troestler"
  "Sergei Lebedev"
  "David Koppstein"
  "Alexander Gryzlov"
  "Francois Berenger"
]

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "base64"
  "ocamlfind" {build}
  "dune" {build & >= "1.0+beta8"}
  "core_kernel" {>= "v0.11.0"}
  "sexplib"
  "camlzip" {>= "1.05"}
  "xmlm"
  "cfstream"
  "ppx_compare"
  "ppx_sexp_conv"
  "re"
  "rresult"
  "uri"
]

depopts: [
  "async"
  "core"
  "lwt"
]

available: [
  ocaml-version >= "4.03.0"
]
