opam-version: "2.0"
name: "biocaml"
synopsis: "The OCaml Bioinformatics Library"
description: """
Biocaml aims to be a high-performance user-friendly library for
Bioinformatics. See the [website](http://biocaml.org) for detailed API
documentation. We welcome contributors and feedback from users. Please
contact us with any comments and suggestions for features you would
like added.
"""
version: "dev"
maintainer: "biocaml@googlegroups.com"
homepage: "http://biocaml.org"
bug-reports: "https://github.com/biocaml/biocaml/issues"
license: "LGPL + linking exception"
dev-repo: "git+https://github.com/biocaml/biocaml.git"
authors: [
  "Sebastien Mondet"
  "Ashish Agarwal"
  "Philippe Veber"
  "Christophe Troestler"
  "Sergei Lebedev"
  "David Koppstein"
  "Alexander Gryzlov"
  "Francois Berenger"
]

build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "base64"
  "dune" {build}
  "core_kernel" {>= "v0.11.0"}
  "sexplib"
  "camlzip" {>= "1.05"}
  "xmlm"
  "cfstream"
  "ppx_compare"
  "ppx_sexp_conv"
  "re"
  "rresult"
  "uri"
]

depopts: [
  "async"
  "core"
  "lwt"
]
