(library
 (name biocaml_unix)
 (public_name biocaml.unix)
 (c_names mzData_stubs pwm_stub)
 (flags :standard -short-paths -open Core)
 (libraries
  base64
  biocaml
  zip
  camlp-streams
  core
  core_unix
  core_unix.filename_unix
  core_kernel.binary_packing
  re.perl
  xmlm
  ppx_expect.evaluator)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_inline_test)))
